Edit blueberrypancakes.html and cheapassmochalatte.html and chocolatechipbananabread.html

--- a/recipes/rhubarbcake.html
+++ b/recipes/rhubarbcake.html
@@ -1,2 +1,42 @@
-<h1>Rhubarb Cake</h1>
-  <a href="https://www.google.com/search?q=google&oq=google&aqs=chrome.0.0i67i131i355i433i650j46i67i131i199i433i465i650j0i67i131i433i650j0i67i650j0i67i131i433i650j0i131i433i512j0i67i433i650j0i20i131i263i433i512j0i67i650l2.888j0j15&sourceid=chrome&ie=UTF-8">Rhubarb Cake</a>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset ="UTF-8">
+    <title>Rhubarb Cake</title>
+  </head>
+
+  <body>
+    <h1 id='header'>Rhubarb Cake</h1>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSeMZafsg8rliZz1wHgB50TIGS9tR85-fA9tw&usqp=CAU" alt="a picture of a slice of rhubarb cake that looks delicious">
+    
+      <h2><u>Recipe</u></h2>
+        <p>This recipe is a childhood favorite. When the rhubarb cake is baking I can almost smell it in the kitchen of my childhood home. My favorite part is the cinnamon sugar topping. When the sugar melts in the oven, a crust forms that is somehow both crispy and melt-in-your-mouth buttery. If you bring this to a gathering, make sure to bring copies of the recipe because people will surely ask for it.</p>
+      <h3>Ingredients</h3>
+        <ul>
+          <li>1 1/2 cups brown sugar</li>
+          <li>1/2 cup salted butter, softened, not melted</li>
+          <li>2 eggs</li>
+          <li>1 tsp baking soda</li>
+          <li>1 cup buttermilk, or 1 cup milk + 1 Tbsp white vinegar</li>
+          <li>2 cups flour or Bob's Red Mill 1:1 gluten-free flour</li>
+          <li>1/2 tsp salt</li>
+          <li>2 cups chopped rhubarb, add up to 2 extra cups for a more tart dessert</li>
+          <li>1/3 cup sugar</li>
+          <li>1 1/2 tsp cinnamon</li>
+        </ul>
+      <h3>Directions</h3>
+        <ol>
+          <li>Cream brown sugar, butter, and eggs.</li>
+          <li>In a separate bowl, mix baking soda and buttermilk together.</li>
+          <li>In another separate bowl, mix flour and salt together.</li>
+          <li>Alternate adding buttermilk mixture and flour mixture to creamed ingredients and mix gently.</li>
+          <li>Fold in chopped rhubarb, then pour mixture into an ungreased 9x13 pan.</li>
+          <li>Mix sugar and cinnamon together and evenly sprinkle on top of cake.</li>
+          <li>Bake uncovered at 350 degrees for 40 minutes. Test doneness by inserting a toothpick; a dry toothpick means the cake is done.</li>
+          <li>If the crust tastes too sweet or too spicy to you, experiment with changing the ratio of sugar to cinnamon next time you make the cake, which will probably be tomorrow.</li>
+        </ol>
+        <a href="#header">Return to top</a>
+        <p></p>
+        <a href="../index.html">Return to list of recipes</a>  
+    </body>
+</html> 
