--- a/recipes/blueberrypancakes.html
+++ b/recipes/blueberrypancakes.html
@@ -28,7 +28,7 @@
             <li>Cook until the batter bubbles, flip and let cook until done, about 2-3 minutes per side.</li>
             <li>Serve immediately. Makes 8 pancakes.</li>
         </ol>
-        <a href="#header">Return to top</a>
+        <a href="#header">Back to top</a>
         <p></p>
         <a href="../index.html">Return to list of recipes</a>
         </body>
