--- a/recipes/cheapassmochalatte.html
+++ b/recipes/cheapassmochalatte.html
@@ -28,6 +28,6 @@
         </ol>
       <a href="#header">Back to top</a>
       <p></p>
-      <a href="../index.html">Back to list of recipes</a>
+      <a href="../index.html">Return to list of recipes</a>
     </body>
 </html>
