--- a/recipes/rhubarbcake.html
+++ b/recipes/rhubarbcake.html
@@ -35,7 +35,7 @@
           <li>Bake uncovered at 350 degrees for 40 minutes. Test doneness by inserting a toothpick; a dry toothpick means the cake is done.</li>
           <li>If the crust tastes too sweet or too spicy to you, experiment with changing the ratio of sugar to cinnamon next time you make the cake, which will probably be tomorrow.</li>
         </ol>
-        <a href="#header">Return to top</a>
+        <a href="#header">Back to top</a>
         <p></p>
         <a href="../index.html">Return to list of recipes</a>  
     </body>
